--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input type="text" id="userinput" class="form-control" placeholder="Write your TODO.." onkeydown='return searchKeyPress(event);'>
         <button class="btn btn-success" id="add">Add TODO</button>
         <button class="btn btn-danger" id="removeall">Remove All TODO</button>
-        <ul id="list">First Todo <button class='btn btn-xs btn-danger'>&times;</button></ul>
+        <ul id="list"></ul>
     </div>
 
 
